tests/golden/errors/str_pad_bad_fill.py
"x".center(5, "ab")
